cleaning up code. Added average mood in relation to activities stats chart.

--- a/public/index.html
+++ b/public/index.html
@@ -330,9 +330,11 @@
                     </div>
                     <br>
                     <br>
-                    <div>
+                    <br>
+                    <div class="chart-container">
                         <!--Activities and average mood score.-->
-                        <canvas ref="correlationChart"></canvas>
+                        Average Mood Rating by Activity
+                        <canvas ref="activityAverageMoodChart"></canvas>
                     </div>
 
                     
