cleaning up code

--- a/public/index.html
+++ b/public/index.html
@@ -243,6 +243,8 @@
 
                     <div>
                         <div class="div-center">
+                            <h3>Mood Overtime</h3>
+                            <br>
                             <canvas ref="lineMoodChart"></canvas>
 
                         </div>
